index.html update to incl http and https

--- a/tests/index.html
+++ b/tests/index.html
@@ -5,5 +5,6 @@
     </head>
     <body>
         <a href="https://storacct01abc.z33.web.core.windows.net/proxypacexample.html">PAC File Example</a>
+        <a href="http://storacct01abc.z33.web.core.windows.net/proxypacexample.html">PAC File Example</a>
     </body>
 </html>
